--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+pandas==1.0.1
 plotly==4.5.4
 retrying==1.3.3
 six==1.14.0
